Correction des messages derreurs lors de mauvaises saisies de valeurs

--- a/html/Index.html
+++ b/html/Index.html
@@ -14,7 +14,7 @@
                   <section id="coursAncienPrixOnze" class="bloc">
 
                      <div id="blocTitre">
-                        <h1>Calculatrice de plus value sur pièces d'or</h1>
+                        <h1 id="title">Calculatrice de plus value sur pièces d'or</h1>
                         <div id="blocCoursOz">
                            <h2 id="introCoursOz">Cours actuel de l'or : </h2>
                         </div>
